Better fix that does not require VM flags: replace valueOf implementations
* Passes test, but may not fix matters when using reflection